ui: fixes nav-right on firefox

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -59,6 +59,7 @@
     }
     .nav-right {
       position: absolute;
+			bottom:0px;
       right:0px;
       text-align: right;
       line-height: 20px;
